# CoinbaseRobotCPP

./: CMakeLists.txt  main.cpp
src/: CoinbaseRobotCpp.cpp  CoinbaseRobotCpp.h  PathFinder.cpp  PathFinder.h  TickerHooks.cpp  TickerHooks.h  stringbuilder.cpp  stringhelper.cpp
src/Helpers/: Base26.cpp  Base26.h  CoinBalanceHelper.cpp  CoinBalanceHelper.h  CoinTradeHelper.cpp  CoinTradeHelper.h  LoadCoinBalanceHelper.cpp  LoadCoinBalanceHelper.h  LoadCoinsAndMarketsHelper.cpp  LoadCoinsAndMarketsHelper.h  OrderHelper.cpp  OrderHelper.h  ProcessHelper.cpp  ProcessHelper.h  PurgeMarketsHelper.cpp  PurgeMarketsHelper.h
src/Models/: AuditLevelPath.cpp  AuditLevelPath.h  Coin.cpp  Coin.h  CoinBalanceConcensus.cpp  CoinBalanceConcensus.h  CoinBalances.cpp  CoinBalances.h  CoinPathStore.cpp  CoinPathStore.h  CoinPathTest0.cpp  CoinPathTest0.h  CoinPathTest1.cpp  CoinPathTest1.h  CoinPathTest2.cpp  CoinPathTest2.h  CoinPathTest3.cpp  CoinPathTest3.h  CoinPathTest4.cpp  CoinPathTest4.h  CoinTest.cpp  CoinTest.h  ExchaingMap.cpp  ExchaingMap.h  MapValue.cpp  MapValue.h  MarketData.cpp  MarketData.h  MarketLevel.cpp  MarketLevel.h  MarketPair.cpp  MarketPair.h  MarketRate.cpp  MarketRate.h  MarketRateState.cpp  MarketRateState.h  MarketSaveState.cpp  MarketSaveState.h  PathStep.cpp  PathStep.h  (+4 more)
